# ThiefSnitcher

./: .gitignore  CMakeLists.txt  README.md  config.yaml  install.txt
src/: CMakeLists.txt  main.cpp  monitoring_system.cpp  monitoring_system.hpp  rest_endpoint.cpp  rest_endpoint.hpp  sensor_evaluator.cpp  sensor_evaluator.hpp  sensor_evaluator_simple.cpp  sensor_evaluator_simple.hpp
src/endpoint/: CMakeLists.txt  controls_controller.cpp  controls_controller.hpp  rest_server.cpp  rest_server.hpp  sensor_controller.cpp  sensor_controller.hpp
src/tracker/: CMakeLists.txt  thief_tracker.hpp  thief_tracker_impl.cpp  thief_tracker_impl.hpp
src/util/: CMakeLists.txt  device.hpp  enum.hpp  monitoring_msg.hpp  msg_queue.hpp  sensor.hpp
